New design for the header name, home, and signout

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -227,6 +227,7 @@ Field_VerificationMethodChallengeResponses=Secret Questions and Answers
 Field_VerificationMethodAttributes=Personal Data
 Field_VerificationMethodRemoteResponses=External Responses
 Field_VerificationMethodNAAF=Advanced Authentication
+Field_Placeholder_Answer=Answer
 Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
 Long_Title_Admin=Administrative functions
 Long_Title_ChangePassword=Change your current password.
