continued ldap preview and config enhancements

--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -22,10 +22,14 @@
 
 # Strings found in "ConfigManager" viewable sections of the application
 
-Actor_proxy=Proxy User
-Actor_self=Self (Logged in User)
-Actor_helpdesk=Helpdesk Operator
-Actor_guestManager=Guest Manager
+Actor_Label_proxy=Proxy User
+Actor_Label_self=Self (Logged in User)
+Actor_Label_helpdesk=Helpdesk Operator
+Actor_Label_guestManager=Guest Manager
+Actor_Description_proxy=Proxy User
+Actor_Description_self=Self (Logged in User)
+Actor_Descripiton_helpdesk=Helpdesk Operator
+Actor_Descripiton_guestManager=Guest Manager
 Button_Next=Next
 Button_Previous=Previous
 Button_CheckSettings=Check Settings
