yet more ldap preview and config enhancements

--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -26,10 +26,10 @@ Actor_Label_proxy=Proxy User
 Actor_Label_self=Self (Logged in User)
 Actor_Label_helpdesk=Helpdesk Operator
 Actor_Label_guestManager=Guest Manager
-Actor_Description_proxy=Proxy User
-Actor_Description_self=Self (Logged in User)
-Actor_Descripiton_helpdesk=Helpdesk Operator
-Actor_Descripiton_guestManager=Guest Manager
+Actor_Description_proxy=Permissions required by the LDAP proxy user (defined by the setting <code>@PwmSettingReference:ldap.proxy.password@</code>).  The proxy user will utilize these attribute permissions against any user authenticating to @PwmAppName@.
+Actor_Description_self=Permissions required by logged in users.  Each logged in user should have these permissions against their own LDAP entry for these attributes, but not against other LDAP entries.
+Actor_Description_helpdesk=Permissions required by logged in user while using the helpdesk module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being administered via the helpdesk module.  This is typically done using an LDAP group or permission-role object to assign permissions.
+Actor_Description_guestManager=Permissions required by logged in user while using the guest registration module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being managed via the guest registration module.  This is typically done using an LDAP group or permission-role object to assign permissions.
 Button_Next=Next
 Button_Previous=Previous
 Button_CheckSettings=Check Settings
@@ -53,6 +53,7 @@ Display_ConfigManagerRunning=<p><b>The configuration for this server has been re
 Display_ConfigManagerRunningEditor=Your modified configuration is currently in memory, but has not yet been saved.  Please choose an option below to continue.
 Display_ConfigOpenInfo=<p>While the configuration status is <i>open</i> any user can access this configuration without authenticating to LDAP.</p><p>Please restrict the configuration using the <a id="link-configManager">ConfigurationManager</a> when the configuration is completed enough to authenticate administrative users.</p>
 Display_EditorLDAPSizeExceeded=Search results exceeded maximum search size.  Only this display is affected by this restriction.  Application behavior is not constrained by this search limit so additional users will match beyond those shown here.
+Display_LdapPermissionRecommendations=These permission recommendations are based on the current configuration.  These recommendations should be applied with caution and with an understanding of the security model of your specific LDAP directory environment.  <b>The suggested permissions may not neccessarily be appropriate for your environment.</b>
 Display_SettingFilter_Level_0=Required
 Display_SettingFilter_Level_1=Standard / Common
 Display_SettingFilter_Level_2=Advanced
@@ -60,6 +61,7 @@ Display_SettingNavigationSeparator=\u0020\u21e8\u0020
 Display_SettingNavigationNullProfile=[profile]
 Display_RememberLogin=Remember password for %1%.
 Display_ProfileNamingRules=<p>Profile names have the following requirements\:</p><ul><li>Start with a letter (a-Z)</li><li>Contain only letters, numbers and hyphens</li><li>Length between 2 and 15 characters</li></ul>
+Label_UserPasswordAttribute=[User Password]
 MenuDisplay_AlternateNewConfig=Edit a new configuration in memory by selecting a new configuration template. After editing the configuration, you can download the <em>%1%</em> file.  This option will not modify the running configuration.
 MenuDisplay_AlternateUnlockConfig=The closing of the <em>%1%</em> file is controlled by the property "configIsEditable" within the file.  Set this property to "true" to return to the online configuration mode. Be aware that while this property is set to true anyone accessing this site can make modifications to the live configuration without authentication.
 MenuDisplay_AlternateUpload=Alternatively, you may upload a previously saved configuration file. The uploaded file will be saved as the new configuration.
