--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -339,6 +339,7 @@ Setting_Description_helpdesk.setPassword.mode=Mode to allow helpdesk administrat
 Setting_Description_helpdesk.setPassword.writeAttributes=Actions to execute after a helpdesk actor modifies the user's password.  Macros may be used.
 Setting_Description_helpdesk.token.sendMethod=Set the method(s) used for sending the token code to the user.
 Setting_Description_helpdesk.useProxy=Use the application proxy connection for all actions initiated in the helpdesk module.  When disabled, actions are initiated using the logged in user's ldap connection, requiring that the user have appropriate privileges in the ldap directory.
+Setting_Description_helpdesk.verificationMethods=Helpdesk Verifications
 Setting_Description_helpdesk.viewStatusValues=
 Setting_Description_http.proxy.url=The url of the HTTP proxy server.  If blank, no proxy server will be used.<ul><li>For http proxy server, use "<i>http\://serverame\:3128</i>" format</li><li>For authenticated proxy server, use the "<i>http\://username\:password@servername\:3128</i>" format</ul></li><br/>
 Setting_Description_idleTimeoutSeconds=Number of seconds after which an authenticated session becomes unauthenticated.
@@ -788,6 +789,7 @@ Setting_Label_helpdesk.setPassword.mode=Set Password UI Mode
 Setting_Label_helpdesk.setPassword.writeAttributes=Post Set Password Actions
 Setting_Label_helpdesk.token.sendMethod=Token Send Method
 Setting_Label_helpdesk.useProxy=Use Proxy Connection
+Setting_Label_helpdesk.verificationMethods=Verification Methods
 Setting_Label_helpdesk.viewStatusValues=Viewable Status Fields
 Setting_Label_http.proxy.url=HTTP Proxy
 Setting_Label_idleTimeoutSeconds=Idle Timeout Seconds
