helpdesk verification enhancements

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -45,6 +45,7 @@ Button_Login=Sign in
 Button_Logout=Sign out
 Button_More=More
 Button_OrgChart=Organizational Chart
+Button_OTP=OTP
 Button_RecoverPassword=Check Answers
 Button_Reset=Clear
 Button_Search=Search
@@ -294,3 +295,4 @@ Value_False=False
 Value_True=True
 Value_NotApplicable=n/a
 Value_Default=Default
+Placeholder_Search=Search
