--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -40,7 +40,9 @@ EventLog_HelpdeskUnlockPassword=Helpdesk Unlock Password
 EventLog_HelpdeskDeleteUser=Helpdesk Delete User
 EventLog_HelpdeskViewDetail=Helpdesk View Detail
 EventLog_HelpdeskVerifyOtp=Helpdesk Verify OTP
+EventLog_HelpdeskVerifyOtpIncorrect=Helpdesk Incorrect OTP Verify
 EventLog_HelpdeskVerifyToken=Helpdesk Verify Token
+EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk Incorrect Token Verify
 EventLog_IntruderUser=Intruder User Lockout
 EventLog_TokenIssued=Token Issued
 EventLog_TokenClaimed=Token Claimed
