idle handler and application mode handler enhancements and fixes

--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -36,7 +36,7 @@ Button_CheckSettings=Check Settings
 Button_ShowAdvanced=Show %1% Advanced Settings
 Button_HideAdvanced=Hide Advanced Settings
 Confirm_RemoveProfile=Are you sure you want to remove the profile <code>%1%</code>?  The setting values associated with this profile will also be removed.
-Confirm_LockConfig=Are you sure you want to restrict the configuration?  After you restrict the configuration, you must authenticate using your LDAP directory credentials before authenticating, so be sure your LDAP configuration is working properly before closing.
+Confirm_LockConfig=Are you sure you want to restrict the configuration?  After you restrict the configuration, you must authenticate using your LDAP directory credentials before authenticating, so be sure your LDAP configuration is working properly before restricting.
 Confirm_SkipGuide=Are you sure you want to skip the configuration guide?
 Confirm_UploadConfig=Are you sure you wish to overwrite the current running configuration with the selected file?
 Confirm_UploadLocalDB=Are you sure you wish to upload and replace the existing LocalDB contents with a previously exported LocalDB archive file?  <p>This operation may take a long time to complete, depending on the size of the archive.</p><p>During the upload, the application will not be available.  If the operation does not complete, the LocalDB will be emptied.</p>
