--- a/src/main/resources/password/pwm/i18n/Error.properties
+++ b/src/main/resources/password/pwm/i18n/Error.properties
@@ -156,6 +156,7 @@ Error_MacroParseError=Macro parse error: %1%
 Error_NoProfileAssigned=No profile is assigned for this operation.
 Error_StartupError=An error occurred while starting the application.  Check the log files for information.
 Error_EnvironmentError=An error with the application environment has prevented the application from starting.
+Error_ApplicationNotRunning=This functionality is not available until the application configuration is restricted.
 
 Error_RemoteErrorValue=Remote Error: %1%
 
