--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -23,6 +23,7 @@
 Category_Description_ACCOUNT_INFO=Show account information to the logged in user.
 Category_Description_ACTIVATION=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that a user may only execute this function once. Existing users should not be able to use this function.
 Category_Description_ACTIVE_DIRECTORY=Active Directory specific settings
+Category_Description_APPLICATION=Application
 Category_Description_ADMINISTRATION=Administration
 Category_Description_APP_SECURITY=
 Category_Description_AUDIT_CONFIG=Auditing
@@ -33,6 +34,7 @@ Category_Description_CAS_SSO=
 Category_Description_CHALLENGE_POLICY=Define the challenge policy users will use for populating response answers.
 Category_Description_CHALLENGE=Settings that control challenge/response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
 Category_Description_CHANGE_PASSWORD=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality seen by all users.
+Category_Description_CLUSTERING=Clustering
 Category_Description_DATABASE=Optional database configuration settings.  If configured, a remote RDBMS SQL-complaint database can be used to store data for certain functions.  Any standard RDBMS that supports a standard Java JDBC driver can work.  Upon startup, a database connection will be made and any necessary tables and schema will be created.  Multiple application instances can be configured for the same database instance.
 Category_Description_DATABASE_ADV=Advanced database configuration settings.
 Category_Description_DATABASE_SETTINGS=Settings
@@ -57,6 +59,7 @@ Category_Description_LDAP=
 Category_Description_LDAP_GLOBAL=Global settings that control the interaction with an LDAP directory.  These settings are applied regardless of the user's LDAP profile.  For profile-specific settings, see Profiles -> LDAP Directory Profiles.
 Category_Description_LDAP_PROFILE=Settings that control interaction with the LDAP directory.  Multiple directory profiles can be created to support multiple LDAP user stores.
 Category_Description_LDAP_SETTINGS=LDAP Settings
+Category_Description_LOCALIZATION=Localization
 Category_Description_LOGGING=Setting high debug levels can cause undesired overhead and the application may suffer as a result.  Conversely, retaining high-level logs can help aid troubleshooting as well as security forensics.
 Category_Description_MODULES=Modules
 Category_Description_NAAF=NAAF (Advanced Authentication Framework)
@@ -84,6 +87,7 @@ Category_Description_SMS=Configuration settings for interfacing with SMS service
 Category_Description_SMS_GATEWAY=
 Category_Description_SMS_MESSAGES=
 Category_Description_SSO=
+Category_Description_TELEMETRY=Telemetry
 Category_Description_TEMPLATES=
 Category_Description_TOKEN=Options for email and sms tokens sent to users.  Chose a token method appropriate to your environment.
 Category_Description_UI_FEATURES=
@@ -99,6 +103,7 @@ Category_Label_ACCOUNT_INFO=Account Information
 Category_Label_ACTIVATION=User Activation
 Category_Label_ACTIVE_DIRECTORY=Microsoft Active Directory
 Category_Label_ADMINISTRATION=Administration
+Category_Label_APPLICATION=Application
 Category_Label_HTTPS_SERVER=HTTPS Server
 Category_Label_APP_SECURITY=Application Security
 Category_Label_AUDIT_CONFIG=Audit Configuration
@@ -109,6 +114,7 @@ Category_Label_CAS_SSO=CAS SSO
 Category_Label_CHALLENGE=Challenge Settings
 Category_Label_CHALLENGE_POLICY=Challenge Policies
 Category_Label_CHANGE_PASSWORD=Change Password
+Category_Label_CLUSTERING=Clustering
 Category_Label_DATABASE=Database (Remote)
 Category_Label_DATABASE_ADV=Advanced
 Category_Label_DATABASE_SETTINGS=Connection
@@ -132,6 +138,7 @@ Category_Label_LDAP_GLOBAL=Global
 Category_Label_LDAP=LDAP
 Category_Label_LDAP_PROFILE=LDAP Directories
 Category_Label_LDAP_SETTINGS=LDAP Settings
+Category_Label_LOCALIZATION=Localization
 Category_Label_LOGGING=Logging
 Category_Label_MODULES=Modules
 Category_Label_NAAF=NAAF
@@ -159,6 +166,7 @@ Category_Label_SMS_GATEWAY=SMS Gateway
 Category_Label_SMS_MESSAGES=SMS Messages
 Category_Label_SMS=SMS
 Category_Label_SSO=Single Sign On
+Category_Label_TELEMETRY=Telemetry
 Category_Label_TEMPLATES=Default Settings
 Category_Label_TOKEN=Tokens
 Category_Label_UI_FEATURES=UI Features
