--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -246,6 +246,7 @@ Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UpdateProfile=Update your user profile data.
 Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
 Long_Title_UserInformation=Information about your password and password policies.
+Long_Title_VerificationSend=Before this user can be selected, the user's identity must be verified.  Please select a verification method.
 Title_AnsweredQuestions=Answered Questions
 Title_ActivateUser=Activate Account
 Title_Admin=Administration
@@ -288,6 +289,7 @@ Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
 Title_UserEventHistory=Password History
 Title_UserInformation=My Account
+Title_VerificationSend=Select verification method
 Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed (upper and lower) case letters</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
 Confirm_DeleteUser=Are you sure you wish to proceed?  If you continue, the selected user will be deleted permanently.  This can not be undone.
 Confirm=Are you sure you wish to proceed?
