minor misc bugfixes

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -180,6 +180,7 @@ Field_AccountEnabled=Account Enabled
 Field_AccountExpired=Account Expired
 Field_AccountExpirationTime=Account Expiration Time
 Field_Code=Code
+Field_DateTime=Date/Time
 Field_OneTimePassword=One-Time Password
 Field_Confirm_Prefix=Confirm
 Field_ConfirmPassword=Confirm Password
@@ -191,6 +192,7 @@ Field_LastLoginTimeDelta=Last Login Time Delta
 Field_LdapProfile=LDAP Profile
 Field_Location=Location
 Field_LogoutURL=Logout URL
+Field_Method=Method
 Field_NetworkAddress=Network Address
 Field_NetworkHost=Network Host
 Field_NewPassword=New Password
