--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -26,7 +26,7 @@ Actor_Label_proxy=Proxy User
 Actor_Label_self=Self (Logged in User)
 Actor_Label_helpdesk=Helpdesk Operator
 Actor_Label_guestManager=Guest Manager
-Actor_Description_proxy=Permissions required by the LDAP proxy user (defined by the setting <code>@PwmSettingReference:ldap.proxy.password@</code>).  The proxy user will utilize these attribute permissions against any user authenticating to @PwmAppName@.
+Actor_Description_proxy=Permissions required by the LDAP proxy user (defined by the setting <code>@PwmSettingReference:ldap.proxy.username@</code>).  The proxy user will utilize these attribute permissions against any user authenticating to @PwmAppName@.
 Actor_Description_self=Permissions required by logged in users.  Each logged in user should have these permissions against their own LDAP entry for these attributes, but not against other LDAP entries.
 Actor_Description_helpdesk=Permissions required by logged in user while using the helpdesk module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being administered via the helpdesk module.  This is typically done using an LDAP group or permission-role object to assign permissions.
 Actor_Description_guestManager=Permissions required by logged in user while using the guest registration module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being managed via the guest registration module.  This is typically done using an LDAP group or permission-role object to assign permissions.
