--- a/src/main/resources/password/pwm/i18n/ConfigGuide.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigGuide.properties
@@ -20,7 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-ldap_admin_description=<p>Please enter the credentials for your LDAP server.  For best security, use a proxy account created specifically for this application.  The proxy account must have sufficient rights to administer the users that will be logging into this system.  Use the fully qualified LDAP distinguished name (DN) of the proxy account.  </p><p>Using the browse feature for this setting requires that your LDAP directory permit anonymous bind.</p>
+ldap_admin_description=<p>Please enter the credentials for your LDAP server.  For best security, use a proxy account created specifically for this application.  The proxy account must have sufficient rights to administer the users that will be logging into this system.  Use the fully qualified LDAP distinguished name (DN) of the proxy account.  </p>
 ldap_admin_title=LDAP Proxy Credentials
 ldap_admin_title_proxy-dn=Proxy DN
 ldap_admin_title_proxy-pw=Proxy Password
