Added a page title into the content area so themes like "mdefault" can make use of it.

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -290,6 +290,15 @@ Title_Success=Success
 Title_TitleBar=@User:ID@  Password Self Service
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
+Title_UserActivity=User Activity
+Title_DataAnalysis=Data Analysis
+Title_Dashboard=Dashboard
+Title_LogViewer=Log Viewer
+Title_TokenLookup=Token Lookup
+Title_URLReference=URL Reference
+Title_Configuration=Configuration
+Title_LDAPPermissionRecommendations=LDAP Permission Recommendations
+Title_ConfigurationSummary=Configuration Summary
 Title_UserEventHistory=Password History
 Title_UserInformation=My Account
 Title_VerificationSend=Select verification method
