minor css fixes and shortcut page enhancements

--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -292,6 +292,12 @@ Title_LDAPConnections=LDAP Connections
 Title_LastMinute=Last Minute
 Title_LastHour=Last Hour
 Title_LastDay=Last Day
+Title_UserActivity=User Activity
+Title_DataAnalysis=Data Analysis
+Title_Dashboard=Dashboard
+Title_LogViewer=Log Viewer
+Title_TokenLookup=Token Lookup
+Title_URLReference=URL Reference
 MenuItem_ConfigEditor=Configuration Editor
 MenuItem_ConfigManager=Configuration Manager
 Field_AppVersion=%1% Version
