--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -27,7 +27,7 @@ Actor_Label_self=Self (Logged in User)
 Actor_Label_helpdesk=Helpdesk Operator
 Actor_Label_guestManager=Guest Manager
 Actor_Description_proxy=Permissions required by the LDAP proxy user (defined by the setting <code>@PwmSettingReference:ldap.proxy.username@</code>).  The proxy user will utilize these attribute permissions against any user authenticating to @PwmAppName@.
-Actor_Description_self=Permissions required by logged in users.  Each logged in user should have these permissions against their own LDAP entry for these attributes, but not against other LDAP entries.
+Actor_Description_self=Permissions required by logged in users.  Each logged in user should have these permissions against their own LDAP entry for these attributes.
 Actor_Description_helpdesk=Permissions required by logged in user while using the helpdesk module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being administered via the helpdesk module.  This is typically done using an LDAP group or permission-role object to assign permissions.
 Actor_Description_guestManager=Permissions required by logged in user while using the guest registration module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being managed via the guest registration module.  This is typically done using an LDAP group or permission-role object to assign permissions.
 Button_Next=Next
@@ -44,7 +44,7 @@ Confirm_SSLDisable=Are you sure you wish to use a non-secure connection?  Many d
 Display_AboutTemplates=<p>Templates are used to set default settings to appropriate values for your system configuration type.  Changing the template will only affect setting values that are at their default.  Settings you have modified will not be affected by changing a template.  You can change the the template type at any time.</p>
 Display_ConfigEditorLocales=<p>Edit the display fields presented to users. Whenever a single value is modified for a setting, all values for that setting will be used to override all default locale-specific values for that particular setting. Display keys not modified from the default will use the default display value of the current defaults.</p>
 Display_ConfigGuideNotSecureLDAP=Your LDAP server connection is not configured to be secure.  If you wish to secure the connection between this system and your LDAP server, return to the previous page and enable secure connections.  Keep in mind that some functionality may not be available with a non-secure connection.
-Display_ConfigGuideSelectCrStorage=<p>Please select the location where user's challenge/response answers are stored.  After the configuration is completed, you can modify the read and write locations separately, enable multiple storage locations, and other options.</p><p>
+Display_ConfigGuideSelectStorage=<p>Please select the location where user data such as challenge/response answers will be stored.  After the configuration is completed, you can modify individual settings, enable multiple storage locations, and other options.</p><p>
 Display_ConfigGuideLdapSchema=The status of the LDAP directory schema extension is shown here.  Extending the schema is optional but recommended.  Alternatively, the application configuration can be modified to use other attributes.
 Display_ConfigGuideLdapSchema2=If you wish, you can extend the schema from this configuration guide.  In some cases, extending the LDAP directory schema may not be reversible, so use caution when performing this operation in any production environments.  Consult your LDAP directory product documentation for more information.
 Display_ConfigManagerConfiguration=<p>Welcome to the Configuration Manager. This system is in configuration mode, which means you can make changes to the running configuration directly through this page.</p><p>The current configuration was loaded at %1%.  (Epoch %2%)</p>
@@ -109,6 +109,9 @@ Title_ConfigGuide_start=Welcome
 Title_ConfigGuide_template=Select Template
 Title_ConfigGuide_crStorage=Response Storage Preference
 Title_ConfigManager=Configuration Manager
+Title_Configuration=Configuration
+Title_LDAPPermissionRecommendations=LDAP Permission Recommendations
+Title_ConfigurationSummary=Configuration Summary
 Warning_ChangeTemplate=<p>Are you sure you want to change the default settings template?</p><p>If you proceed, be sure to closely review the resulting configuration as default values for settings will change.</p>
 Warning_ResetSetting=Are you sure you want to reset the setting <b>%1%</b> to the default value?
 Warning_ShowAdvanced=<strong>Some settings are not displayed.</strong>&nbsp;&nbsp;Select <em>Advanced Options</em> from the <em>View</em> menu to show all settings.
