configmanager style improvements

--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -51,7 +51,7 @@ Display_ConfigManagerConfiguration=<p>Welcome to the Configuration Manager. This
 Display_ConfigManagerNew=<p><b>Welcome to %1%.</b>  We hope you enjoy using this software.</p><p>%1% was not able to detect a pre-existing configuration and is now in new configuration mode.</p>
 Display_ConfigManagerRunning=<p><b>The configuration for this server has been restricted.  However you can still edit the configuration.</b></p><p>For security reasons, to edit the configuration, you must upload (and then download) the <em>%1%</em> file.</p>
 Display_ConfigManagerRunningEditor=Your modified configuration is currently in memory, but has not yet been saved.  Please choose an option below to continue.
-Display_ConfigOpenInfo=<p>While the configuration status is <i>open</i> any user can access this configuration without authenticating to LDAP.</p><p>Please restrict the configuration using the <a id="link-configManager">ConfigurationManager</a> when the configuration is completed enough to authenticate administrative users.</p>
+Display_ConfigOpenInfo=<p>@PwmAppName@ is currently in <b>configuration</b> mode.   This mode allows updating the configuration without authenticating to an LDAP directory first.  End user functionality is not available in this mode.</p><p>After you have verified the LDAP directory settings, use the Configuration Manager to restrict the configuration to prevent unauthorized changes.  After restricting, the configuration can still be changed but will require LDAP directory authentication first.</p>
 Display_EditorLDAPSizeExceeded=Search results exceeded maximum search size.  Only this display is affected by this restriction.  Application behavior is not constrained by this search limit so additional users will match beyond those shown here.
 Display_LdapPermissionRecommendations=These permission recommendations are based on the current configuration.  These recommendations should be applied with caution and with an understanding of the security model of your specific LDAP directory environment.  <b>The suggested permissions may not neccessarily be appropriate for your environment.</b>
 Display_SettingFilter_Level_0=Required
@@ -85,15 +85,15 @@ MenuDisplay_ViewLog=View recent log events. Requires pop-up windows to be enable
 MenuItem_AlternateNewConfig=Alternate Option: Edit a new configuration
 MenuItem_AlternateUnlockConfig=Alternate Option: Un-Locking the Configuration
 MenuItem_CancelEdits=Cancel Edits
-MenuItem_DownloadConfig=Download Configuration File
-MenuItem_DownloadBundle=Download Troubleshooting Bundle
+MenuItem_DownloadConfig=Download Configuration
+MenuItem_DownloadBundle=Troubleshooting Bundle
 MenuItem_LockConfig=Restrict Configuration
-MenuItem_ExportLocalDB=Download LocalDB Archive File
+MenuItem_ExportLocalDB=Download LocalDB
 MenuItem_MainMenu=Main Menu
 MenuItem_ManualConfig=Manual Configuration
 MenuItem_ReturnToEditor=Return To Editor
 MenuItem_StartConfigGuide=Start Configuration Guide
-MenuItem_UploadConfig=Import (Upload) Configuration File
+MenuItem_UploadConfig=Import Configuration
 MenuItem_UnlockConfig=Open Configuration
 MenuItem_ViewLog=View Log
 Setting_Permission_Profile=LDAP Profile
@@ -127,6 +127,7 @@ Warning_InvalidFormat=The value does not have the correct format.
 Warning_UploadIE9=This feature is not available when using Internet Explorer 9 and earlier.  Please use a different browser or a newer version of Internet Explorer.
 Warning_ValueIncorrectFormat=The value does not have the correct format.
 Warning_SmsTestData=The test that will be performed will include resolving configured macros (if any).  The macros will be resolved using data of the logged in user, and thus may include sensitive data.  The message should be formatted as required by the SMS gateway service.
+Warning_NoEndUserModules=End user functionality is not available while the configuration is open.
 Tooltip_ResetButton=Return this setting to its default value.
 Tooltip_HelpButton=Show description for this setting.
 Tooltip_ModifiedNotice=This setting has been modified from the default value
