--- a/src/main/resources/password/pwm/i18n/Health.properties
+++ b/src/main/resources/password/pwm/i18n/Health.properties
@@ -57,7 +57,7 @@ HealthMessage_Config_Certificate=Certificate for setting %1% issue: %2%
 HealthMessage_LDAP_VendorsNotSame=LDAP directories of different vendor types are in use.  This configuration may cause undesirable side effects and is not supported.  %1%
 HealthMessage_LDAP_Ad_History_Asn_Missing=%1% is enabled, but the server at %2% does not support this feature.  Check to be sure it is upgraded to Windows Server 2008 R2 SP1 or greater.  Password changes against this server may fail until this is resolved.
 HealthMessage_LDAP_RecentlyUnreachable=LDAP profile %1% was recently unavailable (%2% ago at %3%): %4%
-HealthMessage_Config_ConfigMode=@PwmAppName@ is currently in <b>configuration</b> mode.   Anyone accessing this site can modify the configuration without a directory authentication.  When ready, restrict the configuration to prevent unauthorized configuration changes.  The configuration can still be edited after closing but will require directory authentication first.
+HealthMessage_Config_ConfigMode=@PwmAppName@ is currently in <b>configuration</b> mode.  Use the Configuration Manager to restrict the configuration to prevent unauthorized changes.
 HealthMessage_CryptoTokenWithNewUserVerification=%1% is enabled and %2% is set to LDAP, this configuration will not work.
 HealthMessage_TokenServiceError=An error occurred during the TokenService startup: %1%
 HealthMessage_Java_HighThreads=Java thread count is unusually large (%1% threads)
