fix manual import password and refine password set control in configgugide

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -288,7 +288,8 @@ Title_SetupOtpSecret=Setup Mobile App Authentication
 Title_Shortcuts=Shortcuts
 Title_Status=Status
 Title_Success=Success
-Title_TitleBar=@User:ID@  Password Self Service
+Title_TitleBarAuthenticated=@User:ID@  Password Self Service
+Title_TitleBar=Password Self Service
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
 Title_UserEventHistory=Password History
