helpdesk verification via ldap attribute

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1084,3 +1084,8 @@ Setting_Label_wordlistCaseSensitive=Wordlist Case Sensitivity
 
 Setting_Description_updateAttributes.email.verification=If true, an email will be sent to the user's email address before the account is updated.  The user must verify receipt of the email before the account will be updated.
 Setting_Description_updateAttributes.sms.verification=If true, an SMS will be sent to the user's mobile phone number before the account is updated.  The user must verify receipt of the SMS before the account will be updated.
+
+
+
+Setting_Label_helpdesk.verification.form=Helpdesk Verificiation Form
+Setting_Description_helpdesk.verification.formHelpdesk Verificiation Form
