--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -43,6 +43,8 @@ EventLog_HelpdeskVerifyOtp=Helpdesk Verify OTP
 EventLog_HelpdeskVerifyOtpIncorrect=Helpdesk Incorrect OTP Verify
 EventLog_HelpdeskVerifyToken=Helpdesk Verify Token
 EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk Incorrect Token Verify
+EventLog_HelpdeskVerifyAttributes=Helpdesk Verify Attributes
+EventLog_HelpdeskVerifyAttributesIncorrect=Helpdesk Incorrect Attributes Verify
 EventLog_IntruderUser=Intruder User Lockout
 EventLog_TokenIssued=Token Issued
 EventLog_TokenClaimed=Token Claimed
