https server certificate management refactoring

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -187,11 +187,10 @@ Setting_Description_activateUser.searchFilter=LDAP search filter used to search 
 Setting_Description_activateUser.token.sendMethod=Set the method(s) used for sending the token code to the user.
 Setting_Description_activateUser.writePostAttributes=Actions to execute after a user is activated and has changed/set their initial password.  Typically this is used to activate the account, as well as put some searchable indicator.<br/><br/>  Macros may be used.
 Setting_Description_activateUser.writePreAttributes=Actions to execute after a user is activated but before the password is set.  Typically this is used to activate the account, as well as put some searchable indicator.<br/><br/>  Macros may be used.
-Setting_Description_https.server.cert.password=HTTPS Certificate Password
-Setting_Description_https.server.cert.pkcs12=HTTPS Certificate PKCS12
-Setting_Description_https.server.tls.protocols=HTTPS TLS Protocols
-Setting_Description_https.server.tls.ciphers=HTTPS TLS Cipher List
-Setting_Description_audit.syslog.certificates=
+Setting_Description_https.server.cert=The private key & certificate used by the @PwmAppName@ HTTPS web server.  If this setting does not have a value, the @PwmAppName@ HTTPS web server will use an auto-generated value based on @PwmSettingReference\:pwm.selfURL@ and other current configuration data.  Changes to this setting will require a server restart.
+Setting_Description_https.server.tls.protocols=HTTPS TLS protocols supported by the @PwmAppName@ HTTPS web server.  Changes to this setting will require a server restart.
+Setting_Description_https.server.tls.ciphers=HTTPS TLS ciphers accepted by the @PwmAppName@ HTTPS web server.  The value for this setting is an ordered, comma separated list of Java SSE provided cipher names.   Changes to this setting will require a server restart.
+Setting_Description_audit.syslog.certificates=TLS Certificate of syslog service.
 Setting_Description_audit.syslog.servers=Syslog audit server.  When configured, all audit events will be forwarded to the specified syslog server.  The format is <b>&lt;protocol&gt;</b>,<b>&lt;address&gt;</b>,<b>&lt;port&gt;</b>.  The value for <b>&lt;protocol&gt;</b> can be either <i>udp</i> or <i>tcp</i>.<br/><br/>Examples\:<table><tr><td>Protocol</td><td>Address</td><td>Port</td><td>Setting</td><tr><tr><td>UDP</td><td>127.0.0.1</td><td>514</td><td>udp,127.0.0.1,514</td><tr><tr><td>TCP</td><td>central-syslog.example.com</td><td>514</td><td>tcp,central-syslog.example.com,514</td><tr><tr><td>TLS</td><td>secure-syslog.example.com</td><td>6514</td><td>tls,central-syslog.example.com,6514</td><tr></table>
 Setting_Description_audit.system.eventList=Event types to record and act upon.
 Setting_Description_audit.user.eventList=Event types to record and act upon.
@@ -637,8 +636,7 @@ Setting_Label_activateUser.searchFilter=Activation Search Filter
 Setting_Label_activateUser.token.sendMethod=Token Send Method
 Setting_Label_activateUser.writePostAttributes=Post-Activation Actions (After Password Change)
 Setting_Label_activateUser.writePreAttributes=Activation Actions (Before Password Change)
-Setting_Label_https.server.cert.password=HTTPS Certificate Password
-Setting_Label_https.server.cert.pkcs12=HTTPS Certificate PKCS12
+Setting_Label_https.server.cert=HTTPS Private Key & Certificate
 Setting_Label_https.server.tls.protocols=TLS Protocols
 Setting_Label_https.server.tls.ciphers=TLS Ciphers
 Setting_Label_audit.syslog.certificates=Syslog Audit Server Certificates
