untranslated password replication progress strings

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -303,4 +303,6 @@ Value_False=False
 Value_True=True
 Value_NotApplicable=n/a
 Value_Default=Default
+Value_ProgressComplete=Complete
+Value_ProgressInProgress=In Progress
 Placeholder_Search=Search
