minor misc fixes

--- a/src/main/resources/password/pwm/i18n/ConfigGuide.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigGuide.properties
@@ -33,7 +33,7 @@ ldap_server_title=LDAP Server
 ldap_server_title_hostname=Hostname
 ldap_server_title_port=Port
 ldap_server_title_secure=Secure (TLS) Connection
-ldap_testuser_description= <p>@PwmAppName@ can periodically check the connection to your LDAP directory.  To perform these checks, @PwmAppName@ needs a test user account configured.  This user account should be created amongst typical user accounts in the LDAP directory.</p><p>@PwmAppName@ will modify the password of the test user account and perform other operations to verify the configuration and the directory's health.  Many configuration settings can also be validated during this process.</p><p>This setting is optional but recommended.  If you do not wish to configure a test user at this time, you can leave this setting blank for now.</p>
+ldap_testuser_description= <p>@PwmAppName@ can periodically check the connection to your LDAP directory.  To perform these checks, @PwmAppName@ needs a test user account configured.  This user account should be created amongst typical user accounts in the LDAP directory.</p><p>@PwmAppName@ will modify the password of the test user account and perform other operations to verify the configuration and the directory's health.  Many configuration settings can also be validated during this process.</p><p>This setting is optional but recommended.  If you do not wish to configure a test user at this time, you can leave this setting blank for now and configure it later.</p>
 password_description=To protect this system, you will need to set a configuration password.  The configuration password will be required whenever you wish to modify the configuration.
 password_title=Configuration Password
 password_title_verify=Verify Configuration Password
