fix trial display issues

--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -35,6 +35,7 @@ Notice_DynamicRefresh=This content is dynamically updated.
 Notice_ReportSummary=Locally cached data is shown here.  This data is periodically read from the configured LDAP directories.
 Notice_EventStatistics=Event statistics shown are for this local server.
 Button_DownloadCSV=Download as CSV
+Notice_TrialRestrictConfig=Restricted configuration is not available in trial mode
 Tooltip_DownloadReportRecords=Download all records to a Comma Separated Value (CSV) file.  All cached records and columns will be downloaded.  Columns are comma delimited (,)  Fields are wrapped with double quotation marks (") when containing a comma (,) in the value.  The first row will contain field names.
 Field_Report_UserDN=UserDN
 Field_Report_LDAP_Profile=LDAP Profile
