improved ldap permission reporting

--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -22,14 +22,16 @@
 
 # Strings found in "ConfigManager" viewable sections of the application
 
-Actor_Label_proxy=Proxy User
-Actor_Label_self=Self (Logged in User)
-Actor_Label_helpdesk=Helpdesk Operator
-Actor_Label_guestManager=Guest Manager
-Actor_Description_proxy=Permissions required by the LDAP proxy user (defined by the setting <code>@PwmSettingReference:ldap.proxy.username@</code>).  The proxy user will utilize these attribute permissions against any user authenticating to @PwmAppName@.
+Actor_Label_proxy=Proxy User \u0020\u21e8\u0020 All
+Actor_Label_self=Self \u0020\u21e8\u0020 Self
+Actor_Label_self_other=Self \u0020\u21e8\u0020 Others
+Actor_Label_helpdesk=Helpdesk Operator \u0020\u21e8\u0020 Others
+Actor_Label_guestManager=Guest Manager \u0020\u21e8\u0020 Others
+Actor_Description_proxy=Permissions required by the LDAP proxy user (defined by the setting <code>@PwmSettingReference:ldap.proxy.username@</code>).  The proxy user will require these attribute permissions for any user entry that authenticates to @PwmAppName@.
 Actor_Description_self=Permissions required by logged in users.  Each logged in user should have these permissions against their own LDAP entry for these attributes.
-Actor_Description_helpdesk=Permissions required by logged in user while using the helpdesk module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being administered via the helpdesk module.  This is typically done using an LDAP group or permission-role object to assign permissions.
-Actor_Description_guestManager=Permissions required by logged in user while using the guest registration module.  The logged in user should have these attribute permissions against the LDAP entries of the user's being managed via the guest registration module.  This is typically done using an LDAP group or permission-role object to assign permissions.
+Actor_Description_self_other=Permissions required by the loggied in user to other users, as appropriate.
+Actor_Description_helpdesk=Permissions required by logged in user while using the helpdesk module.  The logged in user should have these attribute permissions to the LDAP entries of the user's being administered via the helpdesk module.  This is typically done using an LDAP group or permission-role object to assign permissions.
+Actor_Description_guestManager=Permissions required by logged in user while using the guest registration module.  The logged in user should have these attribute permissions to the LDAP entries of the user's being managed via the guest registration module.  This is typically done using an LDAP group or permission-role object to assign permissions.
 Button_Next=Next
 Button_Previous=Previous
 Button_CheckSettings=Check Settings
@@ -53,7 +55,7 @@ Display_ConfigManagerRunning=<p><b>The configuration for this server has been re
 Display_ConfigManagerRunningEditor=Your modified configuration is currently in memory, but has not yet been saved.  Please choose an option below to continue.
 Display_ConfigOpenInfo=<p>@PwmAppName@ is currently in <b>configuration</b> mode.   This mode allows updating the configuration without authenticating to an LDAP directory first.  End user functionality is not available in this mode.</p><p>After you have verified the LDAP directory settings, use the Configuration Manager to restrict the configuration to prevent unauthorized changes.  After restricting, the configuration can still be changed but will require LDAP directory authentication first.</p>
 Display_EditorLDAPSizeExceeded=Search results exceeded maximum search size.  Only this display is affected by this restriction.  Application behavior is not constrained by this search limit so additional users will match beyond those shown here.
-Display_LdapPermissionRecommendations=These permission recommendations are based on the current configuration.  These recommendations should be applied with caution and with an understanding of the security model of your specific LDAP directory environment.  <b>The suggested permissions may not neccessarily be appropriate for your environment.</b>
+Display_LdapPermissionRecommendations=<p>This report shows recommended LDAP permission requirements for the current configuration.  Depending on your LDAP directory type, these may be referred to as permissions, rights, or ACLs (Access Control List).</p><p?>These recommendations should be applied with caution and with an understanding of the security model of your specific LDAP directory environment.  <b>The suggested permissions may not neccessarily be appropriate for your environment.</b>  The access levels <i>read</i> and <i>write</i> are generalizations.  Your LDAP directory may use different permission types.</p><p>There may be additional permissions required that do not appear on this report. For example, permissions required to resolve macro expressions are not included.</p>
 Display_SettingFilter_Level_0=Required
 Display_SettingFilter_Level_1=Standard / Common
 Display_SettingFilter_Level_2=Advanced
